# server/src/router/partnerChat.ts
@@ -1,8 +1,12 @@
 import { Router } from "express";
-import { getPartnerChatAudioUrl } from "../router_handler/partnerChat.js";
+import {
+  getPartnerChatAudioUrl,
+  getPartnerChatHistory,
+} from "../router_handler/partnerChat.js";
 
 const router = Router();
 
+router.get("/messages", getPartnerChatHistory);
 router.get("/messages/:id/audio-url", getPartnerChatAudioUrl);
 
 export default router;
